<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/confirm_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_gap"
        android:layout_marginTop="@dimen/Extra_Large_gap"
        android:layout_marginEnd="@dimen/medium_gap"
        android:fontFamily="monospace"
        android:text="@string/info_confirm_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_confirm_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_gap"
        android:fontFamily="monospace"
        android:textColor="@color/black"
        android:text="@string/show_name_text"
        app:layout_constraintBottom_toTopOf="@+id/mail_confirm_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_text" />

    <TextView
        android:id="@+id/mail_confirm_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_mail_text"
        android:fontFamily="monospace"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/number_confirm_text"
        app:layout_constraintStart_toStartOf="@+id/name_confirm_text"
        app:layout_constraintTop_toBottomOf="@+id/name_confirm_text" />

    <TextView
        android:id="@+id/number_confirm_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:textColor="@color/black"
        android:text="@string/show_number_text"
        app:layout_constraintBottom_toTopOf="@+id/share_btn"
        app:layout_constraintStart_toStartOf="@+id/mail_confirm_text"
        app:layout_constraintTop_toBottomOf="@+id/mail_confirm_text" />

    <Button
        android:id="@+id/share_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:layout_marginBottom="@dimen/Extra_Large_gap"
        android:text="@string/share_btn_text"
        android:backgroundTint="@color/button_color"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/name_show_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_gap"
        android:text=""
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/name_confirm_text"
        app:layout_constraintTop_toTopOf="@+id/name_confirm_text" />

    <TextView
        android:id="@+id/mail_show_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_gap"
        android:text=""
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/mail_confirm_text"
        app:layout_constraintTop_toTopOf="@+id/mail_confirm_text" />

    <TextView
        android:id="@+id/number_show_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_gap"
        android:text=""
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/number_confirm_text"
        app:layout_constraintTop_toTopOf="@+id/number_confirm_text" />

</androidx.constraintlayout.widget.ConstraintLayout>